[package]
authors = ["Cristi Cobzarenco <cristi.cobzarenco@gmail.com>"]
name = "glium-typed-buffer-any"
version = "0.5.0"

description = "Type-erased, dynamically checked vertex buffers for glium"
homepage = "https://github.com/cristicbz/glium-typed-buffer-any"
repository = "https://github.com/cristicbz/glium-typed-buffer-any"
documentation = "https://docs.rs/glium-typed-buffer-any"
readme = "README.md"
keywords = ["glium", "vertex", "buffer", "typed"]
license = "MIT/Apache-2.0"

[dependencies]
glium = "0.25.1"
smallvec = "0.6.10"
